Add test and .envsample
